Add authorizer to handler implementation
