# lib/src/routes/create.ts
@@ -26,9 +26,10 @@ const schema: RouteSchema = (definition) => ({
   response: {
     201: toFastifySchema(documents.response.resource(definition)),
     202: toFastifySchema(documents.response.any),
-    403: toFastifySchema(documents.error403Forbidden),
-    409: toFastifySchema(documents.error409Conflict),
-    503: toFastifySchema(documents.error503Unavailable)
+    401: toFastifySchema(documents.errors.error401Unauthorized),
+    403: toFastifySchema(documents.errors.error403Forbidden),
+    409: toFastifySchema(documents.errors.error409Conflict),
+    503: toFastifySchema(documents.errors.error503Unavailable)
   }
 });
 
