# lib/src/routes/delete.ts
@@ -17,8 +17,9 @@ const schema: RouteSchema = () => ({
   response: {
     200: toFastifySchema(documents.response.any),
     202: toFastifySchema(documents.response.any),
-    403: toFastifySchema(documents.error403Forbidden),
-    503: toFastifySchema(documents.error503Unavailable)
+    401: toFastifySchema(documents.errors.error401Unauthorized),
+    403: toFastifySchema(documents.errors.error403Forbidden),
+    503: toFastifySchema(documents.errors.error503Unavailable)
   }
 });
 
