# lib/src/routes/relationships/findRelationship.ts
@@ -21,8 +21,9 @@ const schema: RouteSchema = (def) => ({
   headers: documents.headers(),
   response: {
     200: toFastifySchema(documents.response.relation(def)),
-    403: toFastifySchema(documents.error403Forbidden),
-    503: toFastifySchema(documents.error503Unavailable)
+    401: toFastifySchema(documents.errors.error401Unauthorized),
+    403: toFastifySchema(documents.errors.error403Forbidden),
+    503: toFastifySchema(documents.errors.error503Unavailable)
   }
 });
 
