# lib/src/routes/relationships/updateRelationship.ts
@@ -23,9 +23,10 @@ const schema = (def: JsonapiResourceDefinition) => ({
   response: {
     200: toFastifySchema(documents.response.relation(def)),
     202: toFastifySchema(documents.response.any),
-    403: toFastifySchema(documents.error403Forbidden),
-    409: toFastifySchema(documents.error409Conflict),
-    503: toFastifySchema(documents.error503Unavailable)
+    401: toFastifySchema(documents.errors.error401Unauthorized),
+    403: toFastifySchema(documents.errors.error403Forbidden),
+    409: toFastifySchema(documents.errors.error409Conflict),
+    503: toFastifySchema(documents.errors.error503Unavailable)
   }
 });
 
