# lib/src/routes/update.ts
@@ -22,8 +22,9 @@ const schema: RouteSchema = (definition) => ({
   response: {
     200: toFastifySchema(documents.response.resource(definition)),
     202: toFastifySchema(documents.response.any),
-    403: toFastifySchema(documents.error403Forbidden),
-    409: toFastifySchema(documents.error409Conflict)
+    401: toFastifySchema(documents.errors.error401Unauthorized),
+    403: toFastifySchema(documents.errors.error403Forbidden),
+    409: toFastifySchema(documents.errors.error409Conflict)
   }
 });
 
